--- a/css/surface.css
+++ b/css/surface.css
@@ -10,6 +10,10 @@
     url("../fonts/OpenSans-Bold.woff") format("woff"),
     url("../fonts/OpenSans-Bold.woff2") format("woff2");
 }
+@font-face {
+    font-family: "OpenSansLight";
+    src: url("../fonts/OpenSans-Light.ttf") format("truetype");
+}
 body {
     margin: 0;
     padding: 0;
@@ -17,6 +21,7 @@ body {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+/*для проверки соответствия по макету*/
 img[alt=mockup] {
     opacity: 0.5;
     width: 100%;
@@ -28,57 +33,64 @@ img[alt=mockup] {
 .uppercase-text {
     text-transform: uppercase;
 }
-header {
+header, section, footer {
     display: flex;
     flex-direction: column;
+}
+header, footer {
+    align-items: center;
+}
+header {
     color: white;
-    height: 100vh;
     background-size: cover;
-    position: relative !important;
 }
 .header-text {
     font-family: "OpenSansBold";
     position: relative;
-    top: 136px;
-    margin-left: auto;
-    margin-right: auto;
-    width: calc(100% - 38px);
+    margin-left: 20px;
+    margin-right: 40px;
+    width: 81.25%;
     display: flex;
     flex-direction: column;
 }
-.header-text > span:first-child {
-    letter-spacing: 1px;
-    line-height: 2.1;
-}
+
 .header-text > span:last-child {
-    position: relative;
-    left: 45px;
-    line-height: 1.3;
-    letter-spacing: 0.8px;
+    margin-left: 44px;
+    margin-top: 30px;
 }
-header svg g {
+header svg g, footer svg g {
     stroke: white;
 }
 header svg .surface-text {
     stroke: none;
 }
+.surface-logo-without-text path:first-child {
+    border: 1px solid #4524a5;
+}
 .surface-logo-with-text {
     margin-left: auto;
     margin-right: auto;
+    /*width: 41.25%;*/
 }
-header button {
+.store-buttons {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 88px;
+    display: flex;
+    flex-direction: column;
+}
+.store-buttons > button {
     color: white;
     background-color: #5e42b0;
-    width: calc(100% - 40px);
+    /*width: calc(100% - 40px);*/
     height: 35px;
     border-radius: 18px;
     border: none;
     display: flex;
-    position: absolute;
-    left: 20px;
-    right: 20px;
 }
-
+.android-download-button {
+    margin-top: 14px;
+}
 .apple-download-button > svg {
     width: 22px;
     height: 24px;
@@ -115,6 +127,19 @@ header button {
 .apple-download-button > span:last-child, .android-download-button > span:last-child {
     font-family: "OpenSansBold";
 }
+.download-app-title {
+    color: white;
+    margin-bottom: 0;
+    font-family: "OpenSansBold";
+}
+.slogan {
+    color: #9b8ec1;
+    margin: 0;
+    font-family: "OpenSansRegular";
+}
+img {
+    width: 100%;
+}
 @media (max-width: 640px) {
     body {
         min-width: 320px;
@@ -125,23 +150,50 @@ header button {
         -webkit-background-size: cover;
         background-size: cover;
     }
+    .store-buttons {
+        width: calc(100% - 40px);
+        margin-bottom: 84px;
+    }
     .header-text {
         font-size: 28px;
+        margin-top: 173px;
     }
     .surface-logo-with-text {
-        width: 133px;
-        height: 36px;
-        position: relative;
-        top: 33px;
+        width: 41.25%;
+        margin-top: 33px;
     }
     .apple-download-button, .android-download-button {
         font-size: 8px;
     }
-    .apple-download-button {
-        bottom: 134px;
+
+    footer {
+        background-image: url("../images/download_app_320.png");
+        -webkit-background-size: cover;
+        background-size: cover;
     }
-    .android-download-button {
-        bottom: 84px;
+    .surface-logo-without-text {
+        width: 72px;
+        height: 74px;
+        padding: 12px 6px;
+        background: linear-gradient(to top, #50379a,#7756d5);
+        border-radius: 25%;
+        box-sizing: border-box;
+        margin-top: 99px;
+    }
+    .download-app-title {
+        font-size: 32px;
+        margin-top: 59px;
+    }
+    .slogan {
+        font-size: 14px;
+    }
+    footer .store-buttons {
+        margin-top: 76px;
+    }
+    footer .surface-logo-with-text {
+        margin-bottom: 6px;
+        margin-top: 86px;
+        top: 0;
     }
 }
 @media (min-width: 641px) and (max-width: 960px) {
